# catkin_ws

./: README.md  catkin_ws.files  catkin_ws.includes  catkin_ws.workspace
devel/: _setup_util.py  setup.sh
devel/include/opencv_node/: SetParams.h  SetParamsRequest.h  SetParamsResponse.h
devel/include/pwm/: cmd_vel_msg.h
devel/include/rosaria/: BumperState.h
devel/include/serial_node/: Angle.h  In_out.h  PIDparams.h  ResetAngle.h  ResetAngleRequest.h  ResetAngleResponse.h
devel/include/tcc_msgs/: cmd_vel_msg.h  interrupt_counter.h  location_goal.h  point.h
devel/include/trabalho_final/: ChangeGoal.h  ChangeGoalRequest.h  ChangeGoalResponse.h
devel/lib/Trabalho_Final/: controlador_de_deslocamento_node  evitador_de_colisoes_node
devel/lib/a_star/: a_star
devel/lib/a_star_test/: a_star
devel/lib/aula5/: emissor_node
devel/lib/interrupts/: interrupts
devel/lib/opencv_node/: opencv_node
devel/lib/pkgconfig/: Trabalho_Final.pc  a_star.pc  a_star_test.pc  aula5.pc  control_loop.pc  dsadsa.pc  interrupts.pc  opencv_node.pc  pwm.pc  rosaria.pc  serial_control.pc  serial_node.pc  stitcher.pc  tcc_msgs.pc  teste.pc  trabalho_final.pc  trabalhomorto.pc
devel/lib/pwm/: pwm
devel/lib/rosaria/: RosAria
devel/lib/serial_node/: serial_node
devel/lib/trabalho_final/: controlador
devel/lib/trabalhomorto/: emissor_node
src/build-serial_control-Desktop_Qt_5_6_0_GCC_64bit-Debug/: Makefile  ui_main_window.h
src/joints_control/: CMakeLists.txt  mainpage.dox  package.xml
src/joints_control/src/: main.cpp  main_window.cpp  qnode.cpp
src/joints_control/ui/: main_window.ui
src/robot_arm/: CMakeLists.txt  package.xml
src/robot_arm/include/robot_arm/: robot_arm_class.h
src/robot_arm/src/: robot_arm.cpp
src/robot_arm/src/libs/: robot_arm_class.cpp
src/robot_arm_urdf/: CMakeLists.txt  manifest.xml  package.xml
src/robot_arm_urdf/launch/: display.launch
src/robot_arm_urdf/meshes/: art_1.stl  art_2.stl  art_3.stl  art_4.stl  art_5.stl  art_6.stl  art_6_1.atl  art_6_2.stl  art_6_3.stl  base.stl
src/robot_arm_urdf/urdf/: robot_arm_urdf.urdf
src/serial_control/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  package.xml  serial_control.pro  serial_control.pro.user.b053ace
src/serial_control/src/: main.cpp  main_window.cpp  qnode.cpp
src/serial_control/ui/: main_window.ui
src/serial_node/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/serial_node/launch/: simulation.launch  simulation.launch~
src/serial_node/msg/: In_out.msg  PIDparams.msg  data.msg~
src/serial_node/src/: defines.h  kalmanFilter.cpp  main3.cpp~  serial.cpp  serial.h  serial.h~  serial_node.cpp  serial_node.cpp~
src/tcc/a_star/: CMakeLists.txt  package.xml
src/tcc/a_star/include/a_star_test/: AStarNode.h  GraphNode.h  LibAstar.h  Point.h
src/tcc/a_star/launch/: simulation.launch~  test.launch
src/tcc/a_star/src/: a_star.cpp
src/tcc/a_star/src/libs/: AStarNode.cpp  GraphNode.cpp  LibAstar.cpp  Point.cpp
src/tcc/control_loop/interrupts/: CMakeLists.txt  package.xml
src/tcc/control_loop/interrupts/src/: interrupts.cpp
src/tcc/control_loop/pwm/: CMakeLists.txt
src/tcc/control_loop/pwm/src/: pwm_master.cpp
src/tcc/control_loop_master/control_loop/: CMakeLists.txt  package.xml
src/tcc/control_loop_master/control_loop/config/: control_params.yaml
src/tcc/control_loop_master/control_loop/include/control_loop/: ControlLoop.h  PID.h
src/tcc/control_loop_master/control_loop/launch/: control_loop.launch  ekf.launch  low_level_control.launch
src/tcc/control_loop_master/control_loop/src/: control_loop.cpp
src/tcc/control_loop_master/control_loop/src/libs/: ControlLoop.cpp  ControlLoop.cpp.autosave  PID.cpp
src/tcc/control_loop_master/heading/: CMakeLists.txt  package.xml
src/tcc/control_loop_master/heading/config/: heading_ekf_params.yaml  heading_params.yaml  heading_params.yaml~
src/tcc/control_loop_master/heading/include/heading/: DigitalFilter.h  EKF_IMU.h  maths.h  mpu.h
src/tcc/control_loop_master/heading/launch/: heading.launch  heading_ekf.launch
src/tcc/control_loop_master/heading/src/: heading.cpp  heading_ekf.cpp
src/tcc/control_loop_master/heading/src/libs/: DigitalFilter.cpp  EKF_IMU.cpp  mpu.cpp
src/tcc/control_loop_master/interrupts/: CMakeLists.txt  package.xml
src/tcc/control_loop_master/interrupts/config/: interrupts_params.yaml
src/tcc/control_loop_master/interrupts/src/: interrupts.cpp
src/tcc/control_loop_master/pwm/: CMakeLists.txt  package.xml
src/tcc/control_loop_master/pwm/src/: pwm_master.cpp
src/tcc/control_loop_master/pwm/src/libs/: Serial.cpp
src/tcc/main_planner/: CMakeLists.txt  package.xml
src/tcc/main_planner/config/: map_load.yaml  map_load_inflated.yaml  planner_params.yaml
src/tcc/main_planner/include/a_star/: GraphNode.h  LibAstar.h
src/tcc/main_planner/include/main_planner/: Planner.h  routeInterpreter.h
src/tcc/main_planner/launch/: laser.launch  main_planner.launch  map_servers.launch  map_servers_pc.launch  monitor.launch  planner.launch
src/tcc/main_planner/src/: main_planner.cpp
src/tcc/main_planner/src/a_star_libs/: GraphNode.cpp  LibAstar.cpp  Point.cpp
src/tcc/main_planner/src/libs/: Planner.cpp  routeInterpreter.cpp
src/tcc/movement_controller/: CMakeLists.txt  package.xml
src/tcc/movement_controller/config/: planner_params.yaml
src/tcc/movement_controller/include/movement_controller/: movementController.h
src/tcc/movement_controller/launch/: movement_controller.launch
src/tcc/movement_controller/src/: movement_controller.cpp
src/tcc/movement_controller/src/libs/: movementController.cpp
src/tcc/opencv_node/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/tcc/opencv_node/src/: CamVision.cpp  CamVision.h  SetParam_h.h  definitions.h  opencv_node.cpp  service_manager.h
src/tcc/rs232_urdf/: CMakeLists.txt  (+2 more)
src/trabalho_final/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/trabalho_final/include/: EmissorNode.h
src/trabalho_final/launch/: simulation.launch
src/trabalho_final/src/: controlador.cpp
src/trabalho_final/src/libs/: EmissorNode.cpp  Node.cpp
(+104 files in other folders)
