<?xml version="1.0"?>
<package>
  <name>trabalho_final</name>
  <version>0.1.0</version>
  <description>The trabalho_final package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tamazato@todo.todo">tamazato</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp geometry_msgs sensor_msgs std_msgs</build_depend>
  <run_depend>roscpp geometry_msgs sensor_msgs std_msgs</run_depend>


</package>
