<?xml version="1.0"?>
<package>
  <name>movement_controller</name>
  <version>0.0.0</version>
  <description>The movement_controller package</description>

  <maintainer email="tony@todo.todo">tony</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tcc_msgs</build_depend>
  <build_depend>control_loop</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tcc_msgs</run_depend>
  <run_depend>control_loop</run_depend>

  <export>
  </export>
</package>
