<?xml version="1.0"?>
<package>
  <name>opencv_node</name>
  <version>0.0.0</version>
  <description>The opencv_node package</description>


  <maintainer email="tony@todo.todo">tony</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tcc_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tcc_msgs</run_depend>

</package>
