<?xml version="1.0"?>
<package>
  <name>pwm</name>
  <version>0.0.1</version>
  <description>The pwm package</description>

  <maintainer email="gustavollps@gmail.com">Gustavo Leite Lopes</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tcc_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tcc_msgs</run_depend>

</package>
